<resources>
    <string name="app_name">LeveLife</string>

    <!-- >_ Strings para el LoginActivity _< -->
    <string name="login_title">>_LeveLife Login</string>
    <string name="hint_username">>_Usuario</string>
    <string name="hint_password">>_Contraseña</string>
    <string name="btn_enter">>_Iniciar aventura</string>
    <string name="error_empty_fields">Por favor, completa todos los campos</string>
    <string name="welcome_message">Hola de nuevo, %1$s!</string>
    <string name="error_login_failed">Error: Usuario o contraseña incorrectos</string>
    <string name="btn_register">>_Registrarse</string>
    <string name="error_session_expired">Tu sesión ha caducado, por favor entra de nuevo.</string>
    <string name="error_user_exists">El nombre de usuario ya existe.</string>
    <string name="register_success">¡Usuario creado con éxito! Ahora puedes entrar.</string>

    <!-- >_ Strings para el MainActivity _< -->
    <string name="btn_shop">Tienda</string>
    <string name="btn_tasks">Tareas</string>
    <string name="btn_logout">Cerrar Sesión</string>
    <string name="btn_inventory">Inventario</string>
    <string name="loading_data">Cargando...</string>
    <string name="error_load_user">Error al cargar el perfil de usuario</string>
    <string name="error_session_lost">Error: Se ha perdido la sesión</string>
    <string name="main_welcome_format">Hola, %1$s</string>
    <string name="main_level_format">Nivel: %1$d</string>
    <string name="main_berries_format">🫐 Bayas: %1$d</string>
    <string name="main_level_default">Nivel 1</string>
    <string name="main_xp_default">&gt;_XP: 0/100</string>
    <string name="main_berries_default">🫐 0 Bayas</string>
    <string name="main_xp_format">&gt;_XP: %1$d / %2$d</string>

    <!--  >_ Strings para el ShopActivity _< -->
    <string name="shop_balance_format">Tus Bayas: %1$d 🫐</string>
    <string name="furniture_price_format">%1$d 🫐</string>
    <string name="furniture_owned">Comprado 🛋️ </string>
    <string name="toast_furniture_selected">Has seleccionado: %1$s por %2$d 🫐</string>
    <string name="success_buy_furniture">¡Has comprado: %1$s!</string>
    <string name="error_not_enough_berries">No tienes suficientes bayas para comprar esto.</string>
    <string name="error_load_catalog">Error al cargar el catálogo</string>
    <string name="error_load_balance">Error al cargar tu balance</string>
    <string name="btn_buy">Comprar</string>

    <string name="placeholder_furniture_name">Nombre Mueble</string>
    <string name="placeholder_furniture_price">0 🫐</string>
    <string name="content_desc_furniture_icon">Icono del mueble</string>

    <!-- >_ Strings para el TaskActivity _< -->
    <string name="reward_claimed">¡Bien! +%1$d XP y +%2$d Bayas</string>
    <string name="item_task_default_title">Tarea de ejemplo</string>
    <string name="item_task_default_category">General</string>
    <string name="item_task_reward_format">+%1$d XP | +%2$d 🫐</string>
    <string name="item_task_clean">"¡No tienes tareas pendientes! Tómate un café ☕ o crea una 👇🏼"</string>
    <string name="dialog_levelup_title">¡NIVEL SUBIDO! 🎉</string>
    <string name="dialog_levelup_message">¡Felicidades! Has alcanzado el Nivel %1$d.\n¡Sigue así!</string>
    <string name="dialog_levelup_button">¡Genial!</string>
    <string name="error_load_tasks">Error: No se pudieron cargar las tareas</string>

    <!-- >_ InventoryAdapter _< -->
    <string name="my_room">Mi Habitación 🛋️</string>
    <string name="action_place_furniture">Colocar 👇🏼</string>
    <string name="empty_inventory">Tu inventario está vacío. 🎒</string>
    <string name="error_loading_inventory">Error cargando mochila. 🎒</string>
    <string name="success_placed_furniture">¡%1$s colocado en tu habitación! 🛋️</string>


    <!-- >_ AlertDialog >_ -->
    <string name="dialog_logout_title">Cerrar Sesión</string>
    <string name="dialog_logout_message">¿Estás seguro de que quieres salir?</string>
    <string name="dialog_yes">Sí, salir</string>
    <string name="dialog_no">Cancelar</string>
    <string name="content_desc_add_task">Añadir nueva tarea</string>
    <string name="dialog_new_task_title">Nueva Tarea</string>
    <string name="hint_task_title">¿Qué tienes que hacer?</string>
    <string name="btn_create">Crear</string>
    <string name="error_empty_task">El título no puede estar vacío</string>
</resources>