<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_activity"
    android:padding="16dp"
    tools:context=".controller.LoginActivity">

    <ImageView
        android:id="@+id/ivLoginLogo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/title_with_no_bg"
        android:contentDescription="Logo >_LeveLife"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/etUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />


    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_light"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLoginLogo" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_light"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/btn_enter"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_bold" android:textColor="@color/fourth_text_logo"
        android:text="@string/btn_register"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>